♻️ Migrating spring-data-jpa-eclipselink