@@ -4,7 +4,6 @@ import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityManagerFactory;
 import jakarta.persistence.LockModeType;
 import jakarta.persistence.PessimisticLockScope;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,13 +11,12 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 @ExtendWith(SpringExtension.class)
 @SpringBootTest
-// @Disabled("fails test")
 class PessimisticLockScopesIntegrationTest {
 
    @Autowired
@@ -27,7 +25,7 @@ class PessimisticLockScopesIntegrationTest {
    @Test
    void givenEntityWithJoinInheritance_whenLock_thenNormalAndExtendScopesLockParentAndChildEntity() {
       EntityManager em = getEntityManagerWithOpenTransaction();
-      Employee employee = new Employee(1L, "JOE", "DOE", new BigDecimal(4.5));
+      Employee employee = new Employee(1L, "JOE", "DOE", new BigDecimal("4.5"));
       em.persist(employee);
       em.getTransaction()
             .commit();
@@ -56,7 +54,7 @@ class PessimisticLockScopesIntegrationTest {
    void givenEntityWithElementCollection_whenLock_thenExtendScopeLocksAlsoCollectionTable() {
       EntityManager em = getEntityManagerWithOpenTransaction();
       Address address = new Address("Poland", "Warsaw");
-      Customer customer = new Customer(1L, "JOHN", "SMITH", Arrays.asList(address));
+      Customer customer = new Customer(1L, "JOHN", "SMITH", List.of(address));
       em.persist(customer);
       em.getTransaction()
             .commit();
@@ -86,7 +84,7 @@ class PessimisticLockScopesIntegrationTest {
       EntityManager em = getEntityManagerWithOpenTransaction();
       Student student = new Student(1L, "JOE");
       Course course = new Course(1L, "COURSE", student);
-      student.setCourses(Arrays.asList(course));
+      student.setCourses(List.of(course));
       em.persist(course);
       em.persist(student);
       em.getTransaction()
